[package]
name = "palantir"
version = "0.1.0"
authors = [
    "MaaniBeigy <manibeygi@gmail.com>", 
    "AASAAM Software Group <info@aasaam.com>",
]
description = "HTTP REST API reverse proxy"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"
homepage = "https://github.com/AASAAM/palantir"
repository = "https://github.com/AASAAM/palantir.git"
keywords = [
    "proxy", 
    "http", 
    "rest", 
    "api", 
    "cache", 
    "health check", 
    "load balance",
]
categories = ["web-programming"]

[badges]
travis-ci = { repository = "AASAAM/palantir", branch = "master" }
coveralls = { repository = "AASAAM/palantir", branch = "master", service = "github" }


[features]
default = []
cache = []
rwlock = []
borrow = []
fast = ["cache", "rwlock", "borrow"]

[dependencies]
# The latest version of the "futures" library, which has lots of utilities
# for writing async code. Enable the "compat" feature to include the
# functions for using futures 0.3 and async/await with the Hyper library,
# which use futures 0.1
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }

# Hyper is an asynchronous HTTP library. We'll use it to power our HTTP
# server and to make HTTP requests.
hyper = "0.12.9"
