[package]
name = "palantir"
version = "0.1.0"
authors = [
    "MaaniBeigy <manibeygi@gmail.com>", 
    "AASAAM Software Group <info@aasaam.com>",
]
description = "HTTP REST API reverse proxy"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"
keywords = [
    "proxy", 
    "http", 
    "rest", 
    "api", 
    "cache", 
    "health check", 
    "load balance",
]
categories = ["web-programming"]


[features]
default = []
cache = []
rwlock = []
borrow = []
fast = ["cache", "rwlock", "borrow"]

[dependencies]
actix-rt = "0.2"
actix-web = { version = "1.0.0", features=["ssl"] }
futures = "0.1.25"
failure = "0.1.3"
url = "1.7.1"
