[package]
name = "palantir"
version = "0.1.0"
authors = [
    "MaaniBeigy <manibeygi@gmail.com>", 
    "AASAAM Software Group <info@aasaam.com>",
]
description = "HTTP REST API reverse proxy"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"
homepage = "https://github.com/AASAAM/palantir"
repository = "https://github.com/AASAAM/palantir.git"
keywords = [
    "proxy", 
    "http", 
    "rest", 
    "api", 
    "cache", 
    "health check", 
    "load balance",
]
categories = ["web-programming"]

[badges]
travis-ci = { repository = "AASAAM/palantir", branch = "master" }
coveralls = { repository = "AASAAM/palantir", branch = "master", service = "github" }


[features]
default = []
cache = []
rwlock = []
borrow = []
fast = ["cache", "rwlock", "borrow"]

[dependencies]
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"]}
hyper = "0.13.0-alpha.4"
tokio = "=0.2.0-alpha.6"
